Add support for `--add-exports` in JavacOptions